--- a/results_accessory_shorter.Rmd
+++ b/results_accessory_shorter.Rmd
@@ -41,21 +41,21 @@ source("scripts/functions.R")
 
 ```{r, echo=FALSE,message=FALSE,,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(2,0.3,.5,0.3), mai=c(.5,1,.5,0.3))
-mod <- lm (log(FinalWeight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
-plot(ReproInv~FinalWeight,data=subset(SummaryInd,ReproInv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
+mod <- lm (log(total_weight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
+plot(ReproInv~total_weight,data=subset(SummaryInd,ReproInv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
 
-mod <- lm (log(FinalWeight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
-plot(fruit_weight~FinalWeight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Fruit weight (mg)",xlim=c(100,2000000),xlab="")
+mod <- lm (log(total_weight)~log(fruit_weight), data=subset(SummaryInd,fruit_weight>0))
+plot(fruit_weight~total_weight,data=subset(SummaryInd,fruit_weight>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Fruit weight (mg)",xlim=c(100,2000000),xlab="")
 words.bottom.right.logxy(mod)
 
-mod <- lm (log(FinalWeight)~log(Prop), data=subset(SummaryInd,Prop>0))
-plot(Prop~FinalWeight,data=subset(SummaryInd,Prop>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="Propagule investment (mg)", xlim=c(100,2000000))
+mod <- lm (log(total_weight)~log(Prop), data=subset(SummaryInd,Prop>0))
+plot(Prop~total_weight,data=subset(SummaryInd,Prop>0), log="xy",col=col.spp[as.factor(species)], pch=16, xlab="", ylab="Propagule investment (mg)", xlim=c(100,2000000))
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
-mod <- lm (log(FinalWeight)~log(PerPropagule), data=subset(SummaryInd,PerPropagule>0))
-plot(PerPropagule~FinalWeight,data=subset(SummaryInd,PerPropagule>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Proportion reproductive investment to propagules",xlim=c(100,2000000),xlab="Total size (mg)")
+mod <- lm (log(total_weight)~log(PerPropagule), data=subset(SummaryInd,PerPropagule>0))
+plot(PerPropagule~total_weight,data=subset(SummaryInd,PerPropagule>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="Proportion reproductive investment to propagules",xlim=c(100,2000000),xlab="Total size (mg)")
 words.bottom.right.logxy(mod)
 mtext("Total size (mg)", 1, outer=TRUE)
 ```
@@ -75,8 +75,8 @@ plot(asin(sqrt(PerAcc_mean))~seed_size,SummarySpp, log="x", pch=16,col=col.spp[a
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logx(mod)
 
-mod <- lm(log(FinalWeight_mean)~asin(sqrt(PerAcc_mean)),SummarySpp)
-plot(asin(sqrt(PerAcc_mean))~FinalWeight_mean,SummarySpp, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="Total weight (mg)",cex=1.3)
+mod <- lm(log(total_weight_mean)~asin(sqrt(PerAcc_mean)),SummarySpp)
+plot(asin(sqrt(PerAcc_mean))~total_weight_mean,SummarySpp, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="Total weight (mg)",cex=1.3)
 words.bottom.right.logx(mod)
 
 mod <- lm(log(seedset_mean)~asin(sqrt(PerAcc_mean)),SummarySpp)
